--- a/hostapd.conf
+++ b/hostapd.conf
@@ -2,9 +2,9 @@ interface=wlan0
 hw_mode=g
 channel=10
 ieee80211d=1
-country_code=FR       # the country code
-ieee80211n=1          # 802.11n support
-wmm_enabled=1         # QoS support
+country_code=FR
+ieee80211n=1
+wmm_enabled=1
 
-ssid=ENPC
+ssid=CaptiveWifi
 
